[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Helm.gd" type="Script" id=1]
[ext_resource path="res://Scripts/2pDown.gd" type="Script" id=2]
[ext_resource path="res://Scripts/2PCombiHelmShip.gd" type="Script" id=3]
[ext_resource path="res://assets/unnamed-4.png" type="Texture" id=4]
[ext_resource path="res://assets/Expeditionary Vessel (1).png" type="Texture" id=5]
[ext_resource path="res://assets/pulse1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/ExpeditionaryVessel/2PShip.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/ExpeditionaryVessel/2PNavTerminal.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Players/Player1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Players/Player2.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=2]
resource_name = "Pulse"
length = 0.16
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -250.256, 153.103 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.99, 0.99 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.858824, 0.858824, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "StopStart"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Pulse"
length = 0.16
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.0664511 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -250.849, -150.83 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.99, 0.99 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.858824, 0.858824, 0.858824, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -271, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "StopStart"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.9999
height = 52.0

[sub_resource type="CapsuleShape2D" id=8]

[node name="Node2D" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
z_index = 2
script = ExtResource( 3 )

[node name="Engine" type="Area2D" parent="."]
position = Vector2( -1.33333, 162 )
rotation = -1.5708
z_index = -1

[node name="Visible" type="Sprite" parent="Engine"]
visible = false
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( -271, 1 )
scale = Vector2( 0.99, 0.99 )
z_index = -1
texture = ExtResource( 6 )
flip_v = true
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engine/Visible"]
autoplay = "StopStart"
anims/Pulse = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/StopStart = SubResource( 4 )

[node name="Visible2" type="Sprite" parent="Engine"]
visible = false
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
position = Vector2( -271, 1 )
scale = Vector2( 0.99, 0.99 )
z_index = -1
texture = ExtResource( 6 )
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Engine/Visible2"]
autoplay = "StopStart"
anims/Pulse = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/StopStart = SubResource( 7 )

[node name="Base" type="Sprite" parent="Engine"]
position = Vector2( 1, 1 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="Helm" type="Area2D" parent="Engine"]
position = Vector2( -37, -1.00013 )
rotation = 1.5708
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engine/Helm"]
position = Vector2( 4, -105.333 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Player1" parent="Engine" instance=ExtResource( 9 )]
position = Vector2( -75.6667, 16.3331 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )

[node name="NavTerminal" parent="Engine" instance=ExtResource( 8 )]
position = Vector2( 0.999996, 1 )
rotation = 1.5708

[node name="KinematicBody2D" parent="Engine" instance=ExtResource( 7 )]
position = Vector2( -2.33335, 4.99999 )
rotation = 1.5708

[node name="Hitbox" type="KinematicBody2D" parent="Engine"]
position = Vector2( 0.999996, 1 )
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Engine/Hitbox"]
polygon = PoolVector2Array( -58, 200.667, -10.6667, 219.333, 49.3333, 205.333, 139.333, 66, 205.333, 64, 206.667, -98.6667, 247.778, -196.667, 222.222, -232.778, 171.111, -246.667, 128.889, -232.222, 96.6667, -212.778, -110, -215, -148.889, -236.667, -195, -238.333, -222.778, -225.556, -243.889, -208.333, -252.667, -185.333, -204.667, -96, -200, 64, -126.667, 70.6667, -63.3333, 190.667, -52, 183.333, -224.444, -188.889, -211.111, -210.556, -157.222, -220.556, -126.111, -193.333, -116.667, -183.333, 109.444, -184.444, 162.778, -220.556, 196.667, -220, 216.667, -208.333, 223.333, -181.111, 43.3333, 194.667, -7.33333, 204, -50.6667, 192.667 )
disabled = true

[node name="Gunner" type="Area2D" parent="Engine"]
position = Vector2( 1.00001, -1.66666 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Engine/Gunner"]
position = Vector2( 3.33333, 156 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Down" type="Area2D" parent="Engine"]
position = Vector2( -176, -0.000610352 )
rotation = 1.5708
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="GunDown" type="Sprite" parent="Engine/Down"]
position = Vector2( 0.333298, 49 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="Player2" parent="Engine" instance=ExtResource( 10 )]
position = Vector2( 112.333, 109 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Engine/Helm" to="." method="_on_Helm_area_entered"]
[connection signal="area_exited" from="Engine/Helm" to="." method="_on_Helm_area_exited"]
[connection signal="area_entered" from="Engine/Gunner" to="Engine/Down" method="_on_Gunner_area_entered"]
[connection signal="area_exited" from="Engine/Gunner" to="Engine/Down" method="_on_Gunner_area_exited"]
